roboshop-prj-helm/01-Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: roboshop
  labels:
    proj: roboshop
    env: dev
    deployment: kubernetes
