roboshop-prj-helm/05-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: roboshop
  annotations:
    # Triggers the AWS Load Balancer Controller to create an ALB
    # kubernetes.io/ingress.class: alb (Deprecated Method)
    # Specifies whether the ALB is internet-facing or internal
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Routes traffic directly to Pod IPs (more efficient than 'instance' mode)
    alb.ingress.kubernetes.io/target-type: ip
    # HealthCheck to validate
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80


# Important Note:
# Required Annotations for HTTPSTo upgrade your manifest for HTTPS.
# you need to add these three key 
# annotations:
#   alb.ingress.kubernetes.io/certificate-arn: Provide the ARN of your SSL certificate from AWS Certificate Manager (ACM)
#   alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
#   alb.ingress.kubernetes.io/ssl-redirect: '443'
